--- a/index.html
+++ b/index.html
@@ -154,13 +154,22 @@
     </form>
   </section>
 
-  <section>
-    <h3>Regalo di nozze</h3>
-    <p>
-      Il regalo più bello sarà la vostra presenza, ma se desiderate contribuire al nostro viaggio di nozze, potete farlo con un bonifico:
-    </p>
-    <p style="text-align:center; font-size: 1.2rem;"><strong>IBAN:</strong> IT00A0000000000000000000000</p>
-    <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
+  </section><section style="position: relative; overflow: hidden;">
+    <div style="position: absolute; top: 0; left: 0; right: 0; bottom: 0; 
+                background-image: url('https://images.openai.com/blob/af7c40dc-d3d8-478e-b4f5-2a6fcaa2a9b6/grandcanyon_pastel.png?trim=auto&width=1200'); 
+                background-size: cover; 
+                background-position: center;
+                opacity: 0.15; 
+                z-index: 0;">
+    </div>
+    <div style="position: relative; z-index: 1;">
+      <h3>Regalo di nozze</h3>
+      <p>
+        Il regalo più bello sarà la vostra presenza, ma se desiderate contribuire al nostro viaggio di nozze, potete farlo con un bonifico:
+      </p>
+      <p style="text-align:center; font-size: 1.2rem;"><strong>IBAN:</strong> IT00A0000000000000000000000</p>
+      <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
+    </div>
   </section>
 
   <section>
