--- a/index.html
+++ b/index.html
@@ -1,185 +1,332 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Matrimonio Mirko & Elena</title>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Open+Sans&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Open Sans', sans-serif;
-      background-color: #f5f1e6;
-      color: #5c4a3d;
-    }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mirko & Elena - 13 Settembre 2025</title>
+  <link rel="icon" type="image/png" href="img/favicon.png"/>
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Montserrat', sans-serif;
+      background-color: #9CAF88;
+      color: #B27777;
+      position: relative;
+      overflow-x: hidden;
+    }
 
-    header {
-      text-align: center;
-      padding: 2rem 1rem;
-      background-color: #e6ddcc;
-      background-image: url('https://images.unsplash.com/photo-1526045478516-99145907023c?auto=format&fit=crop&w=1950&q=80');
-      background-size: cover;
-      background-position: center;
-      color: white;
-    }
+    /* Cornici floreali laterali */
+    .flower-border {
+      position: fixed;
+      top: 0;
+      bottom: 0;
+      width: 100px;
+      z-index: 0;
+      background-repeat: repeat-y;
+      background-size: contain;
+      background-position: center;
+      opacity: 0.6;
+    }
 
-    header h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      margin: 0;
-    }
+    .flower-left {
+      left: 0;
+      background-image: url('img/floreale-sinistra.png');
+    }
 
-    header p {
-      margin: 0.5rem 0 0;
-      font-size: 1.2rem;
-    }
+    .flower-right {
+      right: 0;
+      background-image: url('img/floreale-destra.png');
+    }
 
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
+    header, section, footer {
+      position: relative;
+      z-index: 1;
+    }
 
-    section {
-      margin-bottom: 2rem;
-    }
+    header {
+      background-color: rgba(255, 255, 255, 0.9);
+      padding: 2rem;
+      text-align: center;
+    }
 
-    h2, h3 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 2rem;
-      color: #6d5843;
-    }
+    header h1 {
+      font-family: 'Great Vibes', cursive;
+      font-size: 3rem;
+      color: #B27777;
+      margin: 0;
+    }
 
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
+    header h2 {
+      font-size: 1.2rem;
+      margin-top: 0.5rem;
+      color: #B27777;
+    }
 
-    ul li::before {
-      content: '🌿';
-      margin-right: 0.5rem;
-    }
+    section {
+      max-width: 800px;
+      margin: 2rem auto;
+      background-color: rgba(255, 255, 255, 0.95);
+      padding: 2rem;
+      border-radius: 15px;
+      text-align: justify;
+    }
 
-    .rsvp, .gift-section {
-      background-color: #fffaf3;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
+    h3 {
+      color: #B27777;
+      font-family: 'Montserrat', sans-serif;
+      margin-top: 0;
+      text-align: center;
+    }
 
+    form input,
+    form textarea,
+    form select,
+    form button {
+      display: block;
+      width: 100%;
+      margin-top: 0.5rem;
+      margin-bottom: 1.5rem;
+      padding: 0.75rem;
+      font-size: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    form button {
+      background-color: #B27777;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    .gallery img {
+      width: 100%;
+      max-width: 300px;
+      margin: 10px;
+      border-radius: 10px;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+      color: #fff;
+    }
+
+    ul {
+      padding-left: 1rem;
+    }
+
+    p, li {
+      color: #B27777;
+    }
+
+    /* Stili per la sezione Programma della giornata */
+    .program-timeline {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 20px;
+      padding: 20px 0;
+      text-align: center;
+    }
+
+    .program-item {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: rgba(255, 255, 255, 0.7);
+      padding: 15px 20px;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .program-time {
+      font-family: 'Great Vibes', cursive;
+      font-size: 2rem;
+      color: #B27777;
+      margin-bottom: 5px;
+    }
+
+    .program-icon {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      color: #B27777;
+    }
+
+    .program-description {
+      font-size: 1rem;
+      color: #B27777;
+      margin: 0;
+    }
+
+    .program-item + .program-item::before {
+      content: '↓';
+      font-size: 2rem;
+      color: #B27777;
+      margin: -10px 0;
+      z-index: 2;
+    }
+
+    /* NUOVI STILI PER LA SEZIONE REGALO DI NOZZE */
     .gift-section {
-      position: relative;
-      background-color: rgba(255, 255, 255, 0.95);
-      padding: 2rem;
-      border-radius: 15px;
-      margin: 2rem auto;
-      max-width: 800px;
-      overflow: hidden;
+        /* background-color: #9CAF88; */ /* Rimuoviamo questo perché l'immagine lo coprirà */
+        position: relative; /* Necessario per posizionare l'overlay */
+        padding: 2rem;
+        border-radius: 15px;
+        overflow: hidden;
+        min-height: 300px; /* Altezza minima per apprezzare l'immagine */
+        display: flex; /* Per centrare il contenuto */
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
-    .gift-section::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/Grand_Canyon_Pastel_Painting.jpg');
-      background-size: cover;
-      background-position: center;
-      opacity: 0.15;
-      z-index: 0;
+    .gift-section .background-image-overlay {
+        position: absolute;
+        inset: 0; /* Copre completamente la sezione padre */
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/6/6b/Grand_Canyon_Pastel_Painting.jpg');
+        background-size: cover;
+        background-position: center;
+        /* Rimuovi l'opacità bassa qui e usiamo un overlay scuro sopra */
+        z-index: 0; /* Assicurati che sia dietro il contenuto */
     }
 
-    .gift-section * {
-      position: relative;
-      z-index: 1;
+    .gift-section .background-image-overlay::before {
+        content: '';
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.5); /* Overlay scuro semi-trasparente */
+        z-index: 1; /* Sopra l'immagine ma sotto il testo */
     }
 
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #e6ddcc;
-      font-size: 0.9rem;
-      color: #6d5843;
+    .gift-section .content-wrapper {
+        position: relative;
+        z-index: 2; /* Assicurati che il contenuto sia sopra l'overlay e l'immagine */
+        color: #FFFFFF; /* Testo bianco per un'ottima leggibilità sull'overlay scuro */
+        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8); /* Ombra più forte per il testo */
     }
 
-    .gallery-upload {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
+    .gift-section h3 {
+        color: #FFFFFF; /* Colore bianco per il titolo all'interno di questa sezione */
+        font-size: 2.5rem; /* Reso più grande per risaltare */
+        font-family: 'Great Vibes', cursive; /* Usa un font più elegante per il titolo */
+        margin-bottom: 1rem;
     }
 
-    input[type="file"], input[type="submit"], input[type="email"], input[type="text"] {
-      padding: 0.5rem;
-      border: 1px solid #ccc;
-      border-radius: 5px;
-      font-family: inherit;
+    .gift-section p {
+        color: #FFFFFF; /* Colore bianco per i paragrafi */
+        font-size: 1.1rem;
+        line-height: 1.6;
+        margin-bottom: 0.8rem;
     }
 
-    input[type="submit"] {
-      background-color: #bfa980;
-      color: white;
-      border: none;
-      cursor: pointer;
+    .gift-section strong {
+        font-size: 1.4rem; /* Rendi l'IBAN più grande e visibile */
+        display: block; /* Metti l'IBAN su una nuova riga */
+        margin-top: 1rem;
     }
 
-    input[type="submit"]:hover {
-      background-color: #a8916b;
-    }
-
-  </style>
+  </style>
 </head>
+
 <body>
-  <header>
-    <h1>Mirko & Elena</h1>
-    <p>13 Settembre 2025 - Riva del Garda</p>
-  </header>
+    <div class="flower-border flower-left"></div>
+  <div class="flower-border flower-right"></div>
 
-  <main>
-    <section>
-      <h2>Il nostro giorno speciale</h2>
-      <p>Ci sposeremo all'Hotel du Lac et du Parc Grand Resort a Riva del Garda. Sarà una giornata indimenticabile e speriamo di condividerla con voi!</p>
-    </section>
+  <header>
+    <h1>Mirko & Elena</h1>
+    <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
+  </header>
 
-    <section>
-      <h3>Programma della giornata</h3>
-      <ul>
-        <li><strong>Rito civile:</strong> al parco</li>
-        <li><strong>Aperitivo:</strong> terrazza piscina Cristallo</li>
-        <li><strong>Cena:</strong> veranda</li>
-        <li><strong>Dopo cena:</strong> sala Magnolia</li>
-      </ul>
-    </section>
+  <section>
+    <h3>Programma della giornata</h3>
+    <div class="program-timeline">
+      <div class="program-item">
+        <div class="program-time">16:30</div>
+        <div class="program-icon">👰🤵</div>
+        <p class="program-description">
+          Inizio della **cerimonia civile** immersa nel verde del parco.
+        </p>
+      </div>
 
-    <section class="rsvp">
-      <h3>RSVP</h3>
-      <p>Per favore, conferma la tua presenza entro il 30 giugno 2025:</p>
-      <form action="#" method="post">
-        <input type="text" name="nome" placeholder="Il tuo nome" required><br><br>
-        <input type="email" name="email" placeholder="La tua email" required><br><br>
-        <input type="submit" value="Conferma presenza">
-      </form>
-    </section>
+      <div class="program-item">
+        <div class="program-time">17:30</div>
+        <div class="program-icon">🥂</div>
+        <p class="program-description">
+          **Raffinato aperitivo** all'aperto nella suggestiva terrazza della piscina Cristallo.
+        </p>
+      </div>
 
-    <section class="gift-section">
-      <h3>Regalo di nozze</h3>
-      <p>
-        Il regalo più bello sarà la vostra presenza, ma se desiderate contribuire al nostro viaggio di nozze, potete farlo con un bonifico:
-      </p>
-      <p style="text-align:center; font-size: 1.2rem;"><strong>IBAN:</strong> IT00A0000000000000000000000</p>
-      <p style="text-align:center;">Causale: Viaggio di nozze Mirko & Elena</p>
-    </section>
+      <div class="program-item">
+        <div class="program-time">19:00</div>
+        <div class="program-icon">🍽️</div>
+        <p class="program-description">
+          **Cena indimenticabile** nella veranda panoramica con vista lago.
+        </p>
+      </div>
 
-    <section>
-      <h3>Galleria fotografica</h3>
-      <p>Condividi con noi i tuoi scatti del matrimonio!</p>
-      <form class="gallery-upload" action="#" method="post" enctype="multipart/form-data">
-        <input type="file" name="foto" accept="image/*" required>
-        <input type="submit" value="Carica foto">
-      </form>
-    </section>
-  </main>
+      <div class="program-item">
+        <div class="program-time">21:00</div>
+        <div class="program-icon">🎂</div>
+        <p class="program-description">
+          **Taglio della torta**, seguito da musica e balli con DJ set fino all'1:00.
+        </p>
+      </div>
+    </div>
+  </section>
 
-  <footer>
-    Con amore, Mirko & Elena – 13.09.2025
-  </footer>
+  <section>
+    <h3>RSVP</h3>
+    <form>
+      <label for="nome">Nome e Cognome</label>
+      <input type="text" id="nome" name="nome" required />
+
+      <label for="presenza">Parteciperai?</label>
+      <select id="presenza" name="presenza" required>
+        <option value="">Seleziona</option>
+        <option value="si">Sì</option>
+        <option value="no">No</option>
+      </select>
+
+      <label for="scelta">Preferenze alimentari</label>
+      <select id="scelta" name="scelta">
+        <option value="">Seleziona</option>
+        <option value="carne">Carne</option>
+        <option value="pesce">Pesce</option>
+        <option value="vegano">Vegano</option>
+      </select>
+
+      <label for="note">Allergie o intolleranze</label>
+      <textarea id="note" name="note"></textarea>
+
+      <button type="submit">Invia conferma</button>
+    </form>
+  </section>
+
+  <section>
+    <h3>Gallery</h3>
+    <div class="gallery">
+      <img src="img/IMG-20240922-WA0011.jpg" alt="Immagine matrimonio" />
+    </div>
+  </section>
+
+<section class="gift-section">
+  <div class="background-image-overlay"></div>
+  <div class="content-wrapper">
+    <h3>Regalo di nozze</h3>
+    <p>Il regalo più bello sarà la vostra presenza, ma se desiderate contribuire al nostro viaggio di nozze, potete farlo con un bonifico:</p>
+    <p><strong>IBAN:</strong> IT00A0000000000000000000000</p>
+    <p>Causale: Viaggio di nozze Mirko & Elena</p>
+  </div>
+</section>
+
+  <footer>
+    © 2025 Mirko & Elena. Tutti i diritti riservati.
+  </footer>
 </body>
 </html>
