--- a/index.html
+++ b/index.html
@@ -1,327 +1,88 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mirko & Elena - 13 Settembre 2025</title>
-  <link rel="icon" type="image/png" href="img/favicon.png"/>
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Montserrat', sans-serif;
-      background-color: #9CAF88; /* Verde salvia per l'intero body */
-      color: #FFFFFF; /* Colore del testo predefinito bianco */
-      text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6); /* Ombra leggera per il testo */
-      position: relative;
-      overflow-x: hidden;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mirko & Elena - Il Nostro Giorno Speciale</title>
+    <style>
+        /* Qui andranno tutti i tuoi stili CSS */
+        body {
+            margin: 0;
+            font-family: sans-serif; /* Font di base, lo cambieremo */
+            background-color: #f0f0f0; /* Un colore neutro di partenza */
+            color: #333; /* Colore del testo di base */
+            line-height: 1.6;
+        }
 
-    /* Cornici floreali laterali - completamente rimosse dal CSS e dall'HTML */
-    
-    header, section, footer {
-      position: relative;
-      z-index: 1;
-    }
+        .container {
+            max-width: 960px;
+            margin: 0 auto;
+            padding: 20px;
+        }
 
-    header {
-      background-color: rgba(255, 255, 255, 0.1); /* Sfondo header leggermente trasparente */
-      padding: 2rem;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1); /* Ombra sottile per il header */
-    }
+        h1, h2, h3 {
+            text-align: center;
+            color: #555;
+        }
 
-    header h1 {
-      font-family: 'Great Vibes', cursive;
-      font-size: 3rem;
-      color: #FFFFFF; /* H1 bianco */
-      text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.8); /* Ombra più marcata per il titolo principale */
-      margin: 0;
-    }
+        section {
+            background-color: #fff;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
 
-    header h2 {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-      color: #FFFFFF; /* H2 bianco */
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-    }
-
-    section {
-      max-width: 800px;
-      margin: 2rem auto;
-      background-color: rgba(255, 255, 255, 0.1); /* Sfondo di tutte le sezioni leggermente trasparente */
-      padding: 2rem;
-      border-radius: 15px;
-      text-align: justify;
-      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Ombra per far risaltare le sezioni sul verde */
-    }
-
-    h3 {
-      color: #FFFFFF; /* Titoli H3 bianchi */
-      font-family: 'Montserrat', sans-serif;
-      margin-top: 0;
-      text-align: center;
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-    }
-
-    form label {
-      display: block;
-      margin-top: 1rem;
-      margin-bottom: 0.5rem;
-      color: #FFFFFF; /* Label dei form bianche */
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    }
-
-    form input,
-    form textarea,
-    form select {
-      display: block;
-      width: 100%;
-      margin-top: 0.5rem;
-      margin-bottom: 1.5rem;
-      padding: 0.75rem;
-      font-size: 1rem;
-      border: 1px solid rgba(255, 255, 255, 0.5); /* Bordo chiaro */
-      border-radius: 5px;
-      background-color: rgba(255, 255, 255, 0.2); /* Sfondo input leggermente trasparente */
-      color: #FFFFFF; /* Testo input bianco */
-    }
-
-    form input::placeholder,
-    form textarea::placeholder {
-        color: rgba(255, 255, 255, 0.8); /* Colore placeholder chiaro */
-    }
-
-    form select option {
-        background-color: #9CAF88; /* Sfondo delle singole opzioni del select */
-        color: #FFFFFF; /* Testo delle opzioni del select */
-    }
-
-    form button {
-      background-color: #B27777; /* Pulsante del form: colore invariato, sta bene così */
-      color: white;
-      border: none;
-      cursor: pointer;
-      padding: 0.8rem 1.5rem;
-      border-radius: 5px;
-      transition: background-color 0.3s ease; /* Effetto al passaggio del mouse */
-    }
-
-    form button:hover {
-      background-color: #A06060; /* Colore più scuro al passaggio del mouse */
-    }
-
-    .gallery img {
-      display: none; /* Nasconde completamente l'immagine della gallery */
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
-      color: #FFFFFF; /* Testo footer bianco */
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    }
-
-    ul {
-      padding-left: 1rem;
-    }
-
-    p, li {
-      color: #FFFFFF; /* Paragrafi e liste bianchi */
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-    }
-
-    /* Stili per la sezione Programma della giornata */
-    .program-timeline {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 20px;
-      padding: 20px 0;
-      text-align: center;
-    }
-
-    .program-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: rgba(255, 255, 255, 0.2); /* Sfondo item programma leggermente trasparente */
-      padding: 15px 20px;
-      border-radius: 10px;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombra per risalto */
-    }
-
-    .program-time {
-      font-family: 'Great Vibes', cursive;
-      font-size: 2rem;
-      color: #FFFFFF; /* Orario bianco */
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-      margin-bottom: 5px;
-    }
-
-    .program-icon {
-      font-size: 2.5rem;
-      margin-bottom: 10px;
-      color: #FFFFFF; /* Icone bianche */
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-    }
-
-    .program-description {
-      font-size: 1rem;
-      color: #FFFFFF; /* Descrizione programma bianca */
-      margin: 0;
-    }
-
-    .program-item + .program-item::before {
-      content: '↓';
-      font-size: 2rem;
-      color: #FFFFFF; /* Freccia bianca */
-      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
-      margin: -10px 0;
-      z-index: 2;
-    }
-
-    /* STILI PER LA SEZIONE REGALO DI NOZZE (adattati al nuovo tema generale uniforme) */
-    .gift-section {
-        background-color: rgba(255, 255, 255, 0.1); /* Stile sezione, trasparente come le altre */
-        position: relative;
-        padding: 2rem;
-        border-radius: 15px;
-        overflow: hidden;
-        min-height: auto;
-        display: block;
-        text-align: center;
-        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    }
-
-    .gift-section .background-image-overlay {
-        display: none; /* Nasconde completamente l'overlay e l'immagine di sfondo */
-    }
-
-    .gift-section .content-wrapper {
-        position: relative;
-        z-index: 1;
-        color: #FFFFFF; /* Testo bianco */
-        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6); /* Ombra testo */
-    }
-
-    .gift-section h3 {
-        color: #FFFFFF; /* Titolo bianco */
-        font-size: 2.5rem; /* Reso più grande per il "Regalo di Nozze" per risaltare */
-        font-family: 'Great Vibes', cursive; /* Usa un font più elegante per il titolo */
-        margin-bottom: 1rem;
-        text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.8); /* Ombra più forte per il titolo */
-    }
-
-    .gift-section p {
-        color: #FFFFFF; /* Paragrafi bianchi */
-        font-size: 1.1rem;
-        line-height: 1.6;
-        margin-bottom: 0.8rem;
-    }
-
-    .gift-section strong {
-        font-size: 1.4rem; /* IBAN più grande */
-        display: block; /* Metti l'IBAN su una nuova riga */
-        margin-top: 1rem;
-    }
-
-  </style>
+        footer {
+            text-align: center;
+            padding: 20px;
+            color: #777;
+            font-size: 0.9em;
+        }
+    </style>
 </head>
-
 <body>
-    
+    <header>
+        <div class="container">
+            <h1>Il Nostro Matrimonio</h1>
+            <h2>Mirko & Elena</h2>
+        </div>
+    </header>
 
-  <header>
-    <h1>Mirko & Elena</h1>
-    <h2>13 Settembre 2025 - Du Lac et Du Parc Grand Resort, Riva del Garda</h2>
-  </header>
+    <main>
+        <section id="introduzione">
+            <div class="container">
+                <h3>Benvenuti!</h3>
+                <p>Questa è la sezione di introduzione. Possiamo personalizzarla come preferisci.</p>
+            </div>
+        </section>
 
-  <section>
-    <h3>Programma della giornata</h3>
-    <div class="program-timeline">
-      <div class="program-item">
-        <div class="program-time">16:30</div>
-        <div class="program-icon">👰🤵</div>
-        <p class="program-description">
-          Inizio della **cerimonia civile** immersa nel verde del parco.
-        </p>
-      </div>
+        <section id="dettagli">
+            <div class="container">
+                <h3>Dettagli dell'Evento</h3>
+                <p>Qui potremo inserire informazioni su data, ora e luogo.</p>
+            </div>
+        </section>
 
-      <div class="program-item">
-        <div class="program-time">17:30</div>
-        <div class="program-icon">🥂</div>
-        <p class="program-description">
-          **Raffinato aperitivo** all'aperto nella suggestiva terrazza della piscina Cristallo.
-        </p>
-      </div>
+        <section id="rsvp">
+            <div class="container">
+                <h3>Conferma la Tua Presenza</h3>
+                <p>Modulo RSVP o istruzioni per la conferma.</p>
+            </div>
+        </section>
 
-      <div class="program-item">
-        <div class="program-time">19:00</div>
-        <div class="program-icon">🍽️</div>
-        <p class="program-description">
-          **Cena indimenticabile** nella veranda panoramica con vista lago.
-        </p>
-      </div>
+        <section id="lista-nozze">
+            <div class="container">
+                <h3>Lista Nozze / Regalo</h3>
+                <p>Informazioni sul regalo di nozze.</p>
+            </div>
+        </section>
+    </main>
 
-      <div class="program-item">
-        <div class="program-time">21:00</div>
-        <div class="program-icon">🎂</div>
-        <p class="program-description">
-          **Taglio della torta**, seguito da musica e balli con DJ set fino all'1:00.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <h3>RSVP</h3>
-    <form>
-      <label for="nome">Nome e Cognome</label>
-      <input type="text" id="nome" name="nome" required />
-
-      <label for="presenza">Parteciperai?</label>
-      <select id="presenza" name="presenza" required>
-        <option value="">Seleziona</option>
-        <option value="si">Sì</option>
-        <option value="no">No</option>
-      </select>
-
-      <label for="scelta">Preferenze alimentari</label>
-      <select id="scelta" name="scelta">
-        <option value="">Seleziona</option>
-        <option value="carne">Carne</option>
-        <option value="pesce">Pesce</option>
-        <option value="vegano">Vegano</option>
-      </select>
-
-      <label for="note">Allergie o intolleranze</label>
-      <textarea id="note" name="note"></textarea>
-
-      <button type="submit">Invia conferma</button>
-    </form>
-  </section>
-
-  <section>
-    <h3>Gallery</h3>
-    <div class="gallery">
-          </div>
-  </section>
-
-<section class="gift-section">
-    <div class="content-wrapper">
-    <h3>Regalo di nozze</h3>
-    <p>Il regalo più bello sarà la vostra presenza, ma se desiderate contribuire al nostro viaggio di nozze, potete farlo con un bonifico:</p>
-    <p><strong>IBAN:</strong> IT00A0000000000000000000000</p>
-    <p>Causale: Viaggio di nozze Mirko & Elena</p>
-  </div>
-</section>
-
-  <footer>
-    © 2025 Mirko & Elena. Tutti i diritti riservati.
-  </footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2025 Mirko & Elena. Tutti i diritti riservati.</p>
+        </div>
+    </footer>
 </body>
 </html>
